crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_missing_radio_value.stderr
error: a bound radio input requires a `value` attribute
 --> tests/ui/page/fail/controlled_bind_missing_radio_value.rs:4:58
  |
4 |     let _ = page!({ input { a11y: off, type: "radio", bind: () } });
  |                                                             ^^
